// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle tests is a basic snapshot 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with appearance equal to "danger" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-red-700 dark:bg-red-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with appearance equal to "primary" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with appearance equal to "secondary" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-neutral-800 dark:bg-dark-neutral-800 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with appearance equal to "success" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-green-700 dark:bg-green-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with appearance equal to "warning" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-yellow-700 dark:bg-yellow-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with icons 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  sr-only"
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
    <span
      class="pointer-events-none absolute top-1/2 -translate-y-1/2 z-0 fill-current w-[calc(1.375rem-2px)] h-[calc(1.375rem-2px)] left-[0.3125rem]"
    >
      <test-assets-stub />
    </span>
    <span
      class="pointer-events-none absolute top-1/2 -translate-y-1/2 z-0 fill-current w-[calc(1.375rem-2px)] h-[calc(1.375rem-2px)] right-[0.3125rem]"
    >
      <test-assets-stub />
    </span>
  </div>
</div>
`;

exports[`Toggle tests snapshot with isDisabled set to true 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2 opacity-disabled cursor-not-allowed "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] opacity-disabled cursor-not-allowed"
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      disabled=""
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with labelHidden set to true 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  sr-only"
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with size equal to "large" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[4.375rem] h-[2.1875rem] rounded-[2.1875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[2.1875rem] before:w-[1.6875rem] before:h-[1.6875rem] checked:before:translate-x-[2.1875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;

exports[`Toggle tests snapshot with size equal to "regular" 1`] = `
<div
  class="flex items-center undefined"
  data-testid="toggle"
>
  <label
    class="text-neutral-800 dark:text-dark-neutral-800 mr-2  "
    for="toggle-switch-1"
  >
    toggle
  </label>
  <div
    class="text-neutral-100 dark:text-dark-neutral-100  relative bg-blue-700 dark:bg-blue-300 w-[3.75rem] h-[1.875rem] rounded-[1.875rem] "
  >
    <input
      class="w-full h-full appearance-none cursor-pointer inline-flex p-1 relative disabled:cursor-not-allowed before:bg-neutral-100 dark:before:bg-dark-neutral-100 before:absolute before:rounded-[50%] before:z-100 before:transition-transform before:duration-150 before:translate-x-0 rounded-[1.875rem] before:w-[1.375rem] before:h-[1.375rem] checked:before:translate-x-[1.875rem]"
      id="toggle-switch-1"
      name="toggle"
      role="switch"
      type="checkbox"
      value="value"
    />
  </div>
</div>
`;
